@@ -1,3 +1,8 @@
+2014-04-20 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/gen.c:
+	  More efficient clearing of high bytes of x and y, more efficient right shift.
+
 2014-04-21 Molnar Karoly <molnarkaroly AT users.sf.net>
 	* support/scripts/pic16fam-h-gen.pl: updated
 
